--- a/service.yaml
+++ b/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bookmoa-service
+  name: bookmoa-service 
 spec:
   type: LoadBalancer
   selector:
     app: bookmoa
   ports:
   - port: 80
-    targetPort: 3000
+    targetPort: 3000 # 도커 이미지에서 노출하는 포트와 일치시킴
