--- a/service.yaml
+++ b/service.yaml
@@ -6,6 +6,12 @@ spec:
   type: LoadBalancer
   selector:
     app: bookmoa
+  
+  sessionAffinity: ClientIP # 세션 적용하기 
+  sessionAffinityConfig:
+    clientIP:
+      timeoutSeconds: 10800 # 3시간정도로 세션 설정해두기 
+
   ports:
   - port: 80
     targetPort: 3000 # 도커 이미지에서 노출하는 포트와 일치시킴
